@startuml
title Figure 4a — UML Class diagram — project-owned application contracts
top to bottom direction
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 25
skinparam ranksep 40

package "Identity contracts" {
  class OperatorId <<project value>> {
    operatorIdentity
  }
  interface OperatorContext <<sealed project contract>> {
    authenticated | unauthenticated variant
  }
  class AuthenticatedOperatorContext <<record>> {
    operatorId : OperatorId
  }
  class UnauthenticatedOperatorContext <<record>>
  interface OperatorContextPort <<project port>> {
    current() : OperatorContext
    requireAuthenticated() : OperatorId
  }

  OperatorContext <|.. AuthenticatedOperatorContext
  OperatorContext <|.. UnauthenticatedOperatorContext
  AuthenticatedOperatorContext "1" *-- "1" OperatorId
  OperatorContextPort ..> OperatorContext
  OperatorContextPort ..> OperatorId

  note right of OperatorContext
    Closed identity-state union.
    No nullable operator identity.
    Spring Security types remain adapter-local.
  end note
}

package "Customer review contracts" {
  class CustomerReviewQuery <<project contract>> {
    page
    pageSize : default 50, maximum 200
    activityType
    status
    createdFrom
    createdTo
  }
  class CustomerReviewPage <<project contract>> {
    customerIdentity
    activities : ActivityProjection[*]
    riskEvidence : RiskEvidence[*]
    pageMetadata
    totalActivities
    totalRiskEvidence
  }
  class CustomerSnapshot <<project contract>> {
    customerIdentity
    activities : ActivityProjection[*]
    riskEvidence : RiskEvidence[*]
  }
  class ActivityProjection <<project contract>> {
    transactionId
    family : CARD|PAYMENT|CRYPTO
    amount
    currency
    status
    occurredAt
    familyDetails
  }
  class RiskEvidence <<project contract>> {
    assessmentId
    transactionId
    ruleIdentity
    ruleName
    triggeredAt
    scoreContribution
  }

  CustomerReviewPage "1" o-- "0..*" ActivityProjection
  CustomerReviewPage "1" o-- "0..*" RiskEvidence
  CustomerReviewQuery ..> CustomerReviewPage : selects bounded operator view
  CustomerSnapshot "1" o-- "0..*" ActivityProjection
  CustomerSnapshot "1" o-- "0..*" RiskEvidence
  ActivityProjection -[hidden]right-> RiskEvidence
}

package "Analysis pivot artifacts" {
  interface AnalysisPipelineArtifact <<sealed project contract>> {
    kind : DETECTOR_EVIDENCE|POLICY_RETRIEVAL_EVIDENCE|MODEL_BACKEND_PROVENANCE
    artifactIdentity
    metadata
  }
  class RiskSignalEvidence <<record>> {
    detectorIdentity
    signalIdentity
    score
    provenance
  }
  class PolicyEvidence <<record>> {
    sourceIdentity
    content
    retrievalMetadata
  }
  class AnalysisModelProvenance <<record>> {
    backendIdentity
    modelIdentity
    metadata
  }

  AnalysisPipelineArtifact <|.. RiskSignalEvidence
  AnalysisPipelineArtifact <|.. PolicyEvidence
  AnalysisPipelineArtifact <|.. AnalysisModelProvenance

  note right of AnalysisPipelineArtifact
    Closed tagged-union equivalent.
    Concrete record type is the discriminant.
    No nullable generic payload branch.
  end note
}

package "Analysis orchestration and history contracts" {
  class AnalysisHistoryQuery <<project contract>> {
    page
    pageSize : default 20, maximum 100
  }
  class AnalysisHistoryPage <<project contract>> {
    entries : AnalysisHistoryEntry[*]
    pageMetadata
    totalEntries
  }
  class AnalysisEvidenceEnvelope <<bounded model contract>> {
    customerIdentity
    totalActivityCount
    totalSourceRiskCount
    totalDetectorEvidenceCount
    totalPolicyEvidenceCount
    activities : ActivityProjection[* selected]
    sourceRiskEvidence : RiskEvidence[* selected]
    detectorEvidence : RiskSignalEvidence[* selected]
    policyEvidence : PolicyEvidence[* selected]
  }
  class AnalysisResult <<project contract>> {
    riskLevel : LOW|MEDIUM|HIGH
    findingsSummary
    recommendations
  }
  class AnalysisModelOutput <<project contract>> {
    result : AnalysisResult
    provenance : AnalysisModelProvenance
  }
  class AnalysisHistoryCreateCommand <<project command>> {
    customerIdentity
    operatorIdentity : OperatorId
    generatedAt
    result : AnalysisResult
    evidenceProvenance : PolicyEvidence[*]
    detectorProvenance : RiskSignalEvidence[*]
    modelProvenance : AnalysisModelProvenance
  }
  class AnalysisHistoryEntry <<project contract>> {
    analysisIdentity
    customerIdentity
    operatorIdentity : OperatorId
    generatedAt
    result : AnalysisResult
    evidenceProvenance : PolicyEvidence[*]
    detectorProvenance : RiskSignalEvidence[*]
    modelProvenance : AnalysisModelProvenance
  }

  AnalysisEvidenceEnvelope ..> CustomerSnapshot : projected from complete source context
  AnalysisEvidenceEnvelope "1" o-- "0..*" ActivityProjection : selected detail
  AnalysisEvidenceEnvelope "1" o-- "0..*" RiskEvidence : selected detail
  AnalysisEvidenceEnvelope "1" o-- "0..*" RiskSignalEvidence : selected detail
  AnalysisEvidenceEnvelope "1" o-- "0..*" PolicyEvidence : selected detail

  AnalysisModelOutput "1" *-- "1" AnalysisResult
  AnalysisModelOutput "1" *-- "1" AnalysisModelProvenance

  AnalysisHistoryCreateCommand "1" *-- "1" AnalysisResult
  AnalysisHistoryCreateCommand "1" --> "1" OperatorId
  AnalysisHistoryCreateCommand "1" o-- "0..*" PolicyEvidence
  AnalysisHistoryCreateCommand "1" o-- "0..*" RiskSignalEvidence
  AnalysisHistoryCreateCommand "1" *-- "1" AnalysisModelProvenance

  AnalysisHistoryEntry ..> AnalysisHistoryCreateCommand : persisted form + generated identity
  AnalysisHistoryEntry "1" *-- "1" AnalysisResult
  AnalysisHistoryEntry "1" --> "1" OperatorId
  AnalysisHistoryEntry "1" o-- "0..*" PolicyEvidence
  AnalysisHistoryEntry "1" o-- "0..*" RiskSignalEvidence
  AnalysisHistoryEntry "1" *-- "1" AnalysisModelProvenance
  AnalysisHistoryPage "1" o-- "0..*" AnalysisHistoryEntry
  AnalysisHistoryQuery ..> AnalysisHistoryPage : selects bounded operator view

  AnalysisResult ..> AnalysisEvidenceEnvelope : synthesized from bounded model context
}

note bottom
  UML Class diagram: application-owned contracts are the stable pivot across hexagonal adapters.
  Authentication state is a sealed project-owned OperatorContext; Spring Security types stop at
  adapters. CustomerReviewQuery/Page and AnalysisHistoryQuery/Page bound operator-facing
  review without changing the complete CustomerSnapshot used by analysis. Source truth remains
  the complete CustomerSnapshot/RiskEvidence graph for Stage 1/2. AnalysisEvidenceEnvelope is a
  distinct model-facing projection: exact full-history counts remain truthful while only
  deterministically selected details cross AnalysisModelPort. Detector evidence, retrieval evidence
  and model/backend provenance share a sealed typed artifact family without sharing authority.
  Persistence relations and provider/framework response types do not become members of this
  contract model.
end note
@enduml
